samples/_failures_safe/1761534919_5e1f8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a56ae2a2.c: In function ‘main’:
./samples/SAFE/__tmp_a56ae2a2.c:173:9: error: ‘handle’ undeclared (first use in this function); did you mean ‘handlers’?
  173 |         handle
      |         ^~~~~~
      |         handlers
./samples/SAFE/__tmp_a56ae2a2.c:173:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a56ae2a2.c:174: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_a56ae2a2.c:172:31: note: to match this ‘{’
  172 |     TokenHandler handlers[] = {
      |                               ^
./samples/SAFE/__tmp_a56ae2a2.c:173:9: error: expected declaration or statement at end of input
  173 |         handle
      |         ^~~~~~
